# model-training

./: .bandit  .flake8  .gitignore  .pylintrc  LICENSE  Makefile  README.md  bandit.yaml  coverage.ini  custom_pylint_checkers.py  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_output.txt
.dvc/: config
.github/workflows/: ci.yml  release.yml
custom_linting/: code_smells.py
exploratory/: example.ipynb
metrics/: eval_metrics.json
model-training/: Makefile  README.md  pyproject.toml  requirements.txt
model-training/docs/: mkdocs.yml
model-training/docs/docs/: index.md
model_training/: __init__.py  config.py  dataset.py  pipeline.py  utils.py
model_training/modeling/: __init__.py  evaluate.py  train.py
models/: .gitignore  sentiment_model_v0.0.0-dummy.pkl  sentiment_model_v0.0.0-real.pkl  sentiment_model_v1.0.0-det-1.pkl  sentiment_model_v1.0.0-det-2.pkl  sentiment_model_v1.0.0.pkl  sentiment_model_vtest.pkl
old-model-training/src/: evaluate.py  model.py
reports/: evaluation_metrics.json  evaluation_report.txt  report_v0.0.0-dummy.txt  report_v1.0.0-det-1.txt  report_v1.0.0.txt
secret/: remla_secret.json
src/: dataset.py  evaluate.py  pipeline.py  train.py
tests/: conftest.py  data_integrity.py  infrastructure.py  metamorphic.py  model_development.py  monitoring.py  test_data_integrity.py  test_infrastructure.py  test_metamorphic.py  test_ml_adequecy.py  test_model_development.py  test_monitoring.py  test_training.py
