[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "remla_model_training"
version = "0.0.1"
description = "Training pipeline for restaurant review sentiment analysis ML model"
authors = [{ name = "remla2025-team19" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = "==3.12.9"


# TODO: remove this when merging with the linting config branch
[tool.ruff]
line-length = 99
src = ["model_training"]
include = ["pyproject.toml", "model_training/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["model_training"]
force-sort-within-sections = true
