[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "model_training"
version = "0.0.1"
description = "Training pipeline for restaurant review sentiment analysis ML model"
authors = [{ name = "remla2025-team19" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = "==3.12.9"
